# certutils

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh
.github/workflows/: ci_build.yml  codeql.yml
include/: certutils.h  helper.h  type.h
src/: CMakeLists.txt  cli.c
src/lib/: CMakeLists.txt  convert.c  helper.c  info.c  read.c  type.c
test/: CMakeLists.txt  certutils_info_correct_information_test.cpp  test_api.c
test/mock/: CMakeLists.txt  openssl_mock.cpp  openssl_mock.h
